<resources>
    <string name="app_name">Horario</string>
    <string name="profesor">Profesor:</string>
    <string name="clase">Clase:</string>
    <string name="hora_fin">Hora Fin:</string>
    <string name="hora_inici">Hora Inicio:</string>
    <string name="asignatura">Asignatura:</string>
    <string name="grup">Grupo:</string>
    <string name="dia">Dia:</string>
    <string name="no_disponible">No disponible</string>
    <string-array name="cursos">
        <item>A1</item>
        <item>A2</item>
    </string-array>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
</resources>
